# Crypto2csv

./: .gitattributes  README.md  pyproject.toml  setup.py
Data Extraction/: Data_Extraction.ipynb  coins_list.json
Data_Extraction/: Data_Extraction.ipynb  bitcoin.csv  main.py  output.csv
Data_Extraction/utils/: detailed_data.py  get_dates.py  historical_data.py  process.py
crypto2csv/: main.py
crypto2csv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
crypto2csv/utils/: api_call.py  process.py  tempCodeRunnerFile.py  test.py
src/crypto2csv/: main.py
