[crypto2csv]
name = "crypto2csv"
version = "0.0.1"
authors = [
  { name="Pratham Agrawal", email="pratham.agrawal@gmail.com" },
]
description = "A package to access cryptocurrency data to readable csv format using coin value and date range. 
"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/prathamagrawal/crypto2csv"
"Bug Tracker" = "https://github.com/prathamagrawal/crypto2csv/issues"
